<resources>
    <string name="app_name">Vibration Detector</string>
    <string name="title_activity_nowy_pomiar">NowyPomiar</string>
    <string name="main_title">Vibration Detector</string>
    <string name="analysis_charts">Analysis Charts</string>
    <string name="wczytaj_pomiar">Load data</string>
    <string name="charts">Acceleration Charts</string>
    <string name="sampling_time">Sampling time[Hz]</string>
    <string name="measurement_time">Measurement time[s]</string>
    <string name="start">Start</string>
    <string name="enter_parameters">Enter parameters</string>
    <string name="file_name">File name</string>
    <string name="new_measurement">Show Charts</string>
    <string name="vibration_detector_ver_beta">Vibration Detector ver. 1.3</string>
    <string name="window_label">Enter measurement window time</string>
    <string name="title_activity_new_measurement">NewMeasurement</string>
    <string name="z_axis_string">Z axis</string>
    <string name="y_axis_string">Y axis</string>
    <string name="x_axis_string">X axis</string>
    <string name="X_Analysis">X Analysis</string>
    <string name="Y_Analysis">Y Analysis</string>
    <string name="Z_Analysis">Z Analysis</string>
    <string name="X_displacement">X Disp</string>
    <string name="Y_displacement">Y Disp</string>
    <string name="Z_displacement">Z Disp</string>
    <string name="displacement_charts">Displacement View</string>

</resources>
