<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:alpha="0.8">

    <TextView
        android:id="@+id/parameters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/enter_parameters"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/fileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/file_name"
        android:layout_marginTop="20dp"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/measurement_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/measurement_time"
        android:inputType="number" />

    <EditText
        android:id="@+id/sammpling_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/sampling_time"
        android:inputType="number"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/descriptionEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Description"
        android:inputType="textPersonName"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_gravity="center"
        android:alpha="0.6"
        android:background="@color/checkboxColor"
        android:layout_marginTop="15dp"/>
</LinearLayout>