<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.example.jakpe.vibrationdetector.ChartsActivity"
    android:background="@drawable/activity_background">


    <android.support.v7.widget.Toolbar
        android:id="@+id/charts_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/barColor"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:ignore="UnusedAttribute" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/X_Analysis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/X_Analysis"
            app:layout_constraintBaseline_toBaselineOf="@+id/Y_Analysis"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/buttonXColor"/>

        <com.jjoe64.graphview.GraphView
            android:id="@+id/X_graph"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.jjoe64.graphview.GraphView
            android:id="@+id/Y_graph"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/X_graph"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/X_graph" />

        <com.jjoe64.graphview.GraphView
            android:id="@+id/Z_graph"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Y_graph" />

        <Button
            android:id="@+id/Y_Analysis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/Y_Analysis"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Z_graph"
            android:background="@color/buttonYColor"/>

        <Button
            android:id="@+id/Z_Analysis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/Z_Analysis"
            app:layout_constraintBaseline_toBaselineOf="@+id/Y_Analysis"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/buttonZColor"/>


    </android.support.constraint.ConstraintLayout>





</LinearLayout>
